Updated autotools files

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,15 @@
-AC_INIT([dns], [0.0.1], [b17v134])
-AM_INIT_AUTOMAKE
+AC_INIT(dns, 0.0.1)
+AC_PREREQ(2.69)
+AC_COPYRIGHT(Apache License)
+
+AC_CONFIG_MACRO_DIR([m4])
+AM_PROG_LIBTOOL
+AC_PROG_INSTALL
+
 AC_PROG_CC
-AC_CONFIG_FILES([Makefile src/Makefile])
+AM_INIT_AUTOMAKE
+AC_CONFIG_FILES(Makefile src/Makefile)
+AC_ENABLE_SHARED
+AC_ENABLE_STATIC
 LT_INIT
 AC_OUTPUT
