--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,2 +1,4 @@
-lib_DNS=libdns
-libdns_SOURCES = dns.c
+lib_LTLIBRARIES = libdns.la
+libdns_la_SOURCES = dns.c
+libdns_la_CPPFLAGS=-I${top_srcdir}/include
+libdns_la_LDFLAGS = -module -avoid-version -export-dynamic
