--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,6 +4,7 @@ libdns_la_CFLAGS=-I${top_srcdir}/include
 libdns_la_LDFLAGS = -module -avoid-version -export-dynamic
 
 bin_PROGRAMS = resolv
+resolv_DEPENDENCIES=libdns.la
 resolv_SOURCES = main.c
 resolv_CFLAGS=-I${top_srcdir}/include
 resolv_LDADD = -ldns
