print function moved to separate file

--- a/configure.ac
+++ b/configure.ac
@@ -2,19 +2,22 @@ AC_INIT(dns, 0.0.1)
 AC_PREREQ(2.69)
 
 AC_CONFIG_MACRO_DIR([m4])
-AM_PROG_LIBTOOL
+AC_ENABLE_SHARED
+AC_ENABLE_STATIC
+AC_PROG_CC
 AC_PROG_INSTALL
 
-AC_PROG_CC
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([-Wall -Werror])
+AM_PROG_AR
+AM_PROG_LIBTOOL
+
+LT_INIT
+
 AC_CONFIG_FILES([
     Makefile
     src/Makefile 
     tests/Makefile
 ])
-AC_ENABLE_SHARED
-AC_ENABLE_STATIC
-LT_INIT
 
 PKG_CHECK_MODULES([CHECK], [check >= 0.9.6])
 
