Added spec file to build rpm

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,5 @@
+AM_CFLAGS = -Wall -Werror -I$(top_srcdir)/include
+
 lib_LTLIBRARIES = libdns.la
 libdns_la_SOURCES =                     \
     classes.c                           \
@@ -8,21 +10,20 @@ libdns_la_SOURCES =                     \
     utils.c                             \
     write.c
 
-libdns_la_CFLAGS=-I${top_srcdir}/include
 libdns_la_LDFLAGS = -module -avoid-version -export-dynamic
 otherincludedir = $(includedir)/dns
-otherinclude_HEADERS =                  \
-    ${top_srcdir}/include/classes.h     \
-    ${top_srcdir}/include/dns_resolv.h  \
-    ${top_srcdir}/include/dns.h         \
-    ${top_srcdir}/include/message.h     \
-    ${top_srcdir}/include/print.h       \
-    ${top_srcdir}/include/read.h        \
-    ${top_srcdir}/include/types.h       \
-    ${top_srcdir}/include/write.h
+otherinclude_HEADERS =                    \
+    $(top_builddir)/include/classes.h     \
+    $(top_builddir)/include/dns_resolv.h  \
+    $(top_builddir)/include/dns.h         \
+    $(top_builddir)/include/message.h     \
+    $(top_builddir)/include/print.h       \
+    $(top_builddir)/include/read.h        \
+    $(top_builddir)/include/types.h       \
+    $(top_builddir)/include/utils.h       \
+    $(top_builddir)/include/write.h
 
 bin_PROGRAMS = resolv
 resolv_DEPENDENCIES=libdns.la
 resolv_SOURCES = resolv.c
-resolv_CFLAGS=-I${top_srcdir}/include
 resolv_LDADD = -ldns
