Removed include/dns_resolv.h

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,7 @@ AM_CFLAGS = -Wall -Werror -I$(top_srcdir)/include
 lib_LTLIBRARIES = libdns.la
 libdns_la_SOURCES =                     \
     classes.c                           \
-    dns_resolv.c                        \
+    message.c                           \
     print.c                             \
     read.c                              \
     types.c                             \
@@ -14,7 +14,6 @@ libdns_la_LDFLAGS = -module -avoid-version -export-dynamic
 otherincludedir = $(includedir)/dns
 otherinclude_HEADERS =                    \
     $(top_builddir)/include/classes.h     \
-    $(top_builddir)/include/dns_resolv.h  \
     $(top_builddir)/include/dns.h         \
     $(top_builddir)/include/message.h     \
     $(top_builddir)/include/print.h       \
