--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,9 @@
 SUBDIRS = src tests
 ACLOCAL_AMFLAGS=-I m4
 
-.PHONY: rpm
+.PHONY: docker rpm
 
+docker:
+	podman build -f hack/Dockerfile.alpine -t dns-dev
 rpm:
 	rpmbuild -ba dns.spec
