--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
-AC_INIT(dns, 0.0.1)
-AC_PREREQ(2.69)
+AC_INIT([dns],[0.0.1])
+AC_PREREQ([2.71])
 
 AC_CONFIG_MACRO_DIR([m4])
 AC_ENABLE_SHARED
@@ -9,7 +9,7 @@ AC_PROG_INSTALL
 
 AM_INIT_AUTOMAKE([-Wall -Werror])
 AM_PROG_AR
-AM_PROG_LIBTOOL
+LT_INIT
 
 LT_INIT
 
@@ -21,4 +21,11 @@ AC_CONFIG_FILES([
 
 PKG_CHECK_MODULES([CHECK], [check >= 0.9.6])
 
+
+AC_ARG_ENABLE(
+    [python],
+    (AS_HELP_STRING([--enable-python], [Build python package [default=no]]),
+    [enable_python=$enablevar],
+    [enable_python=no]
+)
 AC_OUTPUT
