--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,10 @@
-SUBDIRS = src tests
+SUBDIRS = python src tests
 ACLOCAL_AMFLAGS=-I m4
 
 .PHONY: docker rpm
 
 docker:
-	podman build -f hack/Dockerfile.alpine -t dns-dev
+	podman build -f hack/Dockerfile.alpine -t dns-dev-alpine
+	podman build -f hack/Dockerfile.ubuntu -t dns-dev-ubuntu
 rpm:
 	rpmbuild -ba dns.spec
