Updated python packasge install: use pip

--- a/python/Makefile.am
+++ b/python/Makefile.am
@@ -1,6 +1,6 @@
 if ENABLE_PYTHON
 
 install-exec-local:
-	$(PYTHON) setup.py install --prefix=$(DESTDIR)$(prefix)
+	$(PYTHON) -m pip install --prefix=$(DESTDIR)$(prefix) .
 
 endif
