--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,35 @@
 name: build
 on: [push]
 jobs:
+  alpine:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: ['3.16.2']
+    container:
+      image: alpine:${{ matrix.version }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up container
+        run: |
+          apk add \
+            autoconf \
+            automake \
+            check-dev \
+            gcc \
+            libtool \
+            make \
+            musl-dev \
+            pkgconfig \
+            py3-dev \
+            py3-pip \
+            py3-wheel
+      - name: build and install
+        run: |
+          autoreconf -i
+          ./configure --enable-python --prefix=/usr
+          make check
+          make install
   ubuntu:
     runs-on: ubuntu-latest
     strategy:
