--- a/Makefile.am
+++ b/Makefile.am
@@ -5,6 +5,7 @@ ACLOCAL_AMFLAGS=-I m4
 
 docker:
 	podman build -f hack/Dockerfile.alpine -t dns-dev-alpine
+	podman build -f hack/Dockerfile.fedora -t dns-dev-fedora
 	podman build -f hack/Dockerfile.ubuntu -t dns-dev-ubuntu
 rpm:
 	rpmbuild -ba dns.spec
