Added to spec file python3-dns package

--- a/hack/Dockerfile.fedora
+++ b/hack/Dockerfile.fedora
@@ -10,4 +10,5 @@ RUN dnf install -y \
     pkgconfig \
     python3-devel \
     python3-pip \
-    python3-wheel
+    python3-wheel \
+    rpm-build
