Added check openssl package

--- a/configure.ac
+++ b/configure.ac
@@ -20,6 +20,7 @@ AC_CONFIG_FILES([
 ])
 
 PKG_CHECK_MODULES([CHECK], [check >= 0.9.6])
+PKG_CHECK_MODULES([OPENSSL], [openssl])
 
 AC_ARG_ENABLE(
     [python],
