--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
             libtool \
             make \
             musl-dev \
+            openssl-dev \
             pkgconfig \
             python3-dev \
             py3-pip \
@@ -48,6 +49,7 @@ jobs:
             gcc \
             libtool \
             make \
+            openssl-devel \
             pkgconfig \
             python3-devel \
             python3-pip \
@@ -75,6 +77,7 @@ jobs:
             automake \
             check \
             gcc \
+            libssl-dev \
             libtool \
             make \
             pkg-config \
