--- a/hack/Dockerfile.fedora
+++ b/hack/Dockerfile.fedora
@@ -7,6 +7,7 @@ RUN dnf install -y \
     gcc \
     libtool \
     make \
+    openssl-devel \
     pkgconfig \
     python3-devel \
     python3-pip \
