Fix build-rpm workflow

--- a/.github/workflows/build-rpm.yml
+++ b/.github/workflows/build-rpm.yml
@@ -19,6 +19,7 @@ jobs:
             gcc \
             libtool \
             make \
+            openssl-devel \
             pkgconfig \
             python3-devel \
             python3-pip \
