--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,7 @@ jobs:
     strategy:
       matrix:
         version: ['3.16.2']
+        cc: ['clang', 'gcc']
     container:
       image: alpine:${{ matrix.version }}
     steps:
@@ -16,7 +17,6 @@ jobs:
             autoconf \
             automake \
             check-dev \
-            gcc \
             libtool \
             make \
             musl-dev \
@@ -24,11 +24,12 @@ jobs:
             pkgconfig \
             python3-dev \
             py3-pip \
-            py3-wheel
+            py3-wheel \
+            ${{ matrix.cc }}
       - name: build and install
         run: |
           autoreconf -i
-          ./configure --enable-python --prefix=/usr
+          CC=${{ matrix.cc }} ./configure --enable-python --prefix=/usr
           make check
           make install
   fedora:
@@ -36,6 +37,7 @@ jobs:
     strategy:
       matrix:
         version: ['38']
+        cc: ['clang', 'gcc']
     container:
       image: fedora:${{ matrix.version }}
     steps:
@@ -46,18 +48,18 @@ jobs:
             autoconf \
             automake \
             check-devel \
-            gcc \
             libtool \
             make \
             openssl-devel \
             pkgconfig \
             python3-devel \
             python3-pip \
-            python3-wheel
+            python3-wheel \
+            ${{ matrix.cc }}
       - name: build and install
         run: |
           autoreconf -i
-          ./configure --enable-python --prefix=/usr
+          CC=${{ matrix.cc }} ./configure --enable-python --prefix=/usr
           make check
           make install
   ubuntu:
@@ -65,6 +67,7 @@ jobs:
     strategy:
       matrix:
         version: ['22.10']
+        cc: ['clang', 'gcc']
     container:
       image: ubuntu:${{ matrix.version }}
     steps:
@@ -76,7 +79,6 @@ jobs:
             autoconf \
             automake \
             check \
-            gcc \
             libssl-dev \
             libtool \
             make \
@@ -84,10 +86,11 @@ jobs:
             libpython3-dev \
             python3 \
             python3-pip \
-            python3-wheel
+            python3-wheel \
+            ${{ matrix.cc }}
       - name: build and install
         run: |
           autoreconf -i
-          ./configure --enable-python --prefix=/usr
+          CC=${{ matrix.cc }} ./configure --enable-python --prefix=/usr
           make check
           make install
