--- a/.github/workflows/build-rpm.yml
+++ b/.github/workflows/build-rpm.yml
@@ -17,6 +17,7 @@ jobs:
             automake \
             check-devel \
             gcc \
+            json-c-devel \
             libtool \
             make \
             openssl-devel \
