--- a/hack/Dockerfile.alpine
+++ b/hack/Dockerfile.alpine
@@ -7,9 +7,12 @@ RUN apk add \
     check-dev \
     clang \
     gcc \
+    json-c-dev \
     libtool \
     make \
     musl-dev \
     openssl-dev \
     pkgconfig \
-    python3-dev
+    python3-dev \
+    py3-pip \
+    py3-wheel
