--- a/hack/Dockerfile.ubuntu
+++ b/hack/Dockerfile.ubuntu
@@ -7,9 +7,12 @@ RUN apt install -y \
     check \
     clang \
     gcc \
+    libjson-c-dev \
     libssl-dev \
     libtool \
     make \
     pkg-config \
     libpython3-dev \
-    python3
+    python3 \
+    python3-pip \
+    python3-wheel
