--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,17 @@
 CFLAGS_JSON_C = `pkg-config --cflags json-c`
 LDFLAGS_JSON_C = `pkg-config --libs json-c`
 
+CFLAGS_NGHTTP2 = `pkg-config --cflags libnghttp2`
+LDFLAGS_NGHTTP2 = `pkg-config --libs libnghttp2`
+
+CFLAGS_LIBEVENT = `pkg-config --cflags libevent`
+LDFLAGS_LIBEVENT = `pkg-config --libs libevent`
+
+CFLAGS_LIBEVENT_OPENSSL = `pkg-config --cflags libevent_openssl`
+LDFLAGS_LIBEVENT_OPENSSL = `pkg-config --libs libevent_openssl`
+
 LINKER_FLAGS=`pkg-config --libs openssl` 
-AM_CFLAGS = -Wall -Werror -I$(top_srcdir)/include $(CFLAGS_JSON_C)
+AM_CFLAGS = -Wall -Werror -I$(top_srcdir)/include $(CFLAGS_JSON_C) $(CFLAGS_NGHTTP2) $(CFLAGS_LIBEVENT) $(CFLAGS_LIBEVENT_OPENSSL) 
 
 lib_LTLIBRARIES = libdns.la
 libdns_la_SOURCES =                     \
@@ -16,7 +25,7 @@ libdns_la_SOURCES =                     \
     udp.c                               \
     utils.c                             \
     write.c
-libdns_la_LDFLAGS = -module -avoid-version -export-dynamic $(LINKER_FLAGS) $(LDFLAGS_JSON_C)
+libdns_la_LDFLAGS = -module -avoid-version -export-dynamic -l:libhttp_parser.a $(LINKER_FLAGS) $(LDFLAGS_JSON_C) $(LDFLAGS_NGHTTP2) $(LDFLAGS_LIBEVENT) $(LDFLAGS_LIBEVENT_OPENSSL)
 
 otherincludedir = $(includedir)/dns
 otherinclude_HEADERS =                    \
