--- a/hack/Dockerfile.fedora
+++ b/hack/Dockerfile.fedora
@@ -7,6 +7,8 @@ RUN dnf install -y \
     clang \
     gcc \
     json-c-devel \
+    libevent-devel \
+    libnghttp2-devel \
     libtool \
     make \
     openssl-devel \
