--- a/hack/Dockerfile.alpine
+++ b/hack/Dockerfile.alpine
@@ -8,9 +8,11 @@ RUN apk add \
     clang \
     gcc \
     json-c-dev \
+    libevent-dev \
     libtool \
     make \
     musl-dev \
+    nghttp2-dev \
     openssl-dev \
     pkgconfig \
     python3-dev \
