--- a/hack/Dockerfile.ubuntu
+++ b/hack/Dockerfile.ubuntu
@@ -7,7 +7,9 @@ RUN apt install -y \
     check \
     clang \
     gcc \
+    libevent-dev \
     libjson-c-dev \
+    libnghttp2-dev \
     libssl-dev \
     libtool \
     make \
