--- a/hack/Dockerfile.alpine
+++ b/hack/Dockerfile.alpine
@@ -1,4 +1,4 @@
-FROM docker.io/library/alpine:3.17.0
+FROM docker.io/library/alpine:3.17.1
 
 RUN apk update
 RUN apk add \
@@ -8,9 +8,11 @@ RUN apk add \
     clang \
     gcc \
     json-c-dev \
+    libevent-dev \
     libtool \
     make \
     musl-dev \
+    nghttp2-dev \
     openssl-dev \
     pkgconfig \
     python3-dev \
