--- a/Makefile.am
+++ b/Makefile.am
@@ -1,10 +1,13 @@
 SUBDIRS = src tests python
 ACLOCAL_AMFLAGS=-I m4
 
-.PHONY: autoformat docker format rpm
+.PHONY: autoformat cppcheck docker format rpm
 
 autoformat:
 	find . -iname *.h -o -iname *.c | xargs clang-format --style=WebKit -i
+
+cppcheck:
+	cppcheck --enable=all --suppress=missingIncludeSystem -I include/ --error-exitcode=1 --inline-suppr .
 
 docker:
 	podman build -f hack/Dockerfile.alpine -t dns-dev-alpine
